--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,5 @@ jobs:
       - uses: IRVING-L/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+  <!--START_SECTION:waka-->
+  <!--END_SECTION:waka-->
